...
    <string name="prompt_user">User Name</string>
    <string name="button_login">Log In</string>
    <string name="eLogin0">Username or password is incorrect</string>

    <!-- Strings related to registration -->
    <string name="confirm_password">Confirm Password</string>
    <string name="button_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
...
